[metadata]
name = tmp-dynamic-api-pkg-gxiah
version = 0.1
author = Adam Aquesbi
author_email = adam.aquesbi@epita.fr
description = A toolbox to dynamically build REST and GraphQL APIs 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gXiah/phoenix
project_urls =
    Bug Tracker = https://github.com/gXiah/phoenix/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
